# doble9

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  render.yaml  vercel.json
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  auth.py  deps.py  leaderboard.py  matches.py  schemas.py  store.py  users.py
backend/src/bots/: __init__.py  agent.py  environment.py  train.py
backend/src/core/: __init__.py  config.py  db.py  middleware.py  redis.py  security.py
backend/src/game/: __init__.py  board.py  rules.py  scoring.py  state_machine.py  tile.py
backend/src/models/: __init__.py  base.py  inventory.py  match.py  user.py
backend/src/repositories/: __init__.py  memory.py  protocols.py  sql.py
backend/src/services/: __init__.py  bot_service.py  gemini_service.py  match_service.py
backend/src/ws/: __init__.py  gateway.py  registry.py  runtime.py
backend/tests/: conftest.py  test_api.py  test_board.py  test_bot_service.py  test_config.py  test_gemini_service.py  test_middleware.py  test_models.py  test_redis_store.py  test_rules.py  test_scoring.py  test_security.py  test_state_machine.py  test_tile.py  test_ws_runtime.py
backend/tests/integration/: README.md  conftest.py  test_live_match_e2e.py
contracts/: openapi.yml  websocket.yml
docs/: DEPLOY.md
docs/adr/: ADR-001-dispatcher-pattern.md  ADR-002-phaser-react-integration.md  ADR-003-rl-bot-training.md  ADR-004-ws-reconnect-protocol.md  ADR-005-design-tokens-reconciliation.md  ADR-006-ws-namespace-and-integration-rulings.md  ADR-007-ws-connect-auth-handshake.md  ADR-008-deploy-topology-and-dsn-normalization.md  ADR-009-auth-route-guard.md  ADR-010-round-match-end-kind-points.md  ADR-011-live-counts-and-pass-event.md  ADR-012-deploy-hardening-render-vercel.md
docs/design-reference/: Doble 9's.html  DominoTile.jsx  GamePanels.jsx  HANDOFF-README.md  chat-transcript.md
docs/design-reference/screens/: game-screen.jsx  main-menu.jsx  profile-settings.jsx  results-league.jsx  setup-lobby.jsx  shared.jsx  splash-landing.jsx  store.jsx  tournament.jsx  tutorial.jsx
docs/plans/: 00-architect-plan.md  01-frontend-plan.md  02-backend-plan.md  README.md  design-system.md
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/audio/: AudioEngine.ts
frontend/src/components/: index.ts
frontend/src/game/: GameManager.ts  textures.ts  tokens.ts
frontend/src/hooks/: index.ts  useAudio.ts  useAuth.ts  useChat.ts  useGame.ts
frontend/src/lib/: chroma.ts  constants.ts  debug.ts  nav.ts
frontend/src/mocks/: browser.ts  fixtures.ts  handlers.ts  wsFake.ts
frontend/src/screens/: GameTable.tsx  Landing.tsx  League.tsx  Lobby.tsx  MainMenu.tsx  Profile.tsx  (+7 more)
shared/types/: api.d.ts  game.d.ts
(+46 files in other folders)
