[project]
name = "doble9s-backend"
version = "0.1.0"
description = "Doble 9's — Cuban double-9 domino game backend (FastAPI, authoritative game logic)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-socketio>=5.11",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pyjwt>=2.10",
    "passlib[bcrypt]>=1.7",
    "httpx>=0.28",
]

[project.optional-dependencies]
# Phase 2 — RL bots. Heavy; kept optional so core dev stays lean.
rl = [
    "stable-baselines3>=2.4",
    "torch>=2.5",
    "gymnasium>=1.0",
    "onnx>=1.17",
    "onnxruntime>=1.20",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-watch>=4.2",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
